--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "drupal/pacifica_content",
     "description": "Pacifica content types for metadata.",
     "license": "LGPL-3.0",
+    "type": "drupal-module",
     "authors": [
         {
             "name": "David Brown",
