--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "drupal/pacifica_content",
-    "description": "Pacifica content types for metadata.",
+    "name": "drupal/pacifica_search",
+    "description": "Pacifica search in Drupal.",
     "license": "LGPL-3.0",
     "type": "drupal-module",
     "authors": [
