Another Big Rename
This should organize the repository better for the Search.

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica/pacifica.info.yml
+++ b/pacifica/pacifica.info.yml
@@ -1,5 +1,5 @@
-name: Pacifica API
-description: 'Creates interfaces to Pacifica APIs.'
+name: Pacifica
+description: 'Common Pacifica base module.'
 type: module
 package: Pacifica
 version: VERSION
