--- a/.travis.yml
+++ b/.travis.yml
@@ -71,11 +71,11 @@ before_script:
   - composer run-script drupal-phpunit-upgrade
 
   # Make the module appear in the correct place
-  - ln -s $TESTDIR modules/pacifica_search
+  - ln -s $TESTDIR modules/pacifica
 
   # Install drupal default profile
   - /usr/bin/env PHP_OPTIONS="-d sendmail_path=$(which true)" drush --yes --verbose site-install minimal --db-url=mysql://root:@127.0.0.1/drupal
-  - drush --yes en simpletest pacifica_search_content pacifica_search_api pacifica_search_consumer
+  - drush --yes en simpletest pacifica_search
   - drush cr
 
   # Start a web server on port 8080 in the background.
