--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ before_script:
 
   # Install drupal default profile
   - /usr/bin/env PHP_OPTIONS="-d sendmail_path=$(which true)" drush --yes --verbose site-install minimal --db-url=mysql://root:@127.0.0.1/drupal
-  - drush --yes en simpletest pacifica_search
+  - drush --yes en simpletest pacifica
   - drush cr
 
   # Start a web server on port 8080 in the background.
@@ -85,4 +85,4 @@ before_script:
   - until curl -s example.com:8080; do true; done > /dev/null
 
 script:
-  - php core/scripts/run-tests.sh --suppress-deprecations --verbose --color --concurrency 20 --types "PHPUnit-Functional" --php `which php` --url http://example.com:8080 pacifica_search
+  - php core/scripts/run-tests.sh --suppress-deprecations --verbose --color --concurrency 20 --types "PHPUnit-Functional" --php `which php` --url http://example.com:8080 pacifica
