--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/pacifica",
+    "name": "pacifica/pacifica",
     "description": "Pacifica modules for Drupal.",
     "license": "LGPL-3.0",
     "type": "drupal-module",
