--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require": {
         "drupal/bigint": "1.x-dev",
-        "drupal/json_field": "^1.0@RC"
+        "drupal/json_field": "^1.0@RC",
+        "drupal/name": "^1.0@RC"
     }
 }
