--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "drupal/bigint": "1.x-dev",
         "drupal/json_field": "^1.0@RC",
-        "drupal/name": "^1.0@RC"
+        "drupal/name": "^1.0@RC",
+        "drupal/auto_entitylabel": "^3.0@beta"
     }
 }
