--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/bigint": "1.x-dev",
         "drupal/json_field": "^1.0@RC",
         "drupal/name": "^1.0@RC",
-        "drupal/auto_entitylabel": "^3.0@beta"
+        "drupal/auto_entitylabel": "^3.0@beta",
+        "drupal/token": "^1.7"
     }
 }
