--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "drupal/json_field": "^1.0@RC",
         "drupal/name": "^1.0@RC",
         "drupal/auto_entitylabel": "^3.0@beta",
-        "drupal/token": "^1.7"
+        "drupal/token": "^1.7",
+        "drupal/search_api_solr": "^3.9",
+        "drupal/facets": "^1.4"
     }
 }
