Add Search and Base Content
This adds some base content types for people, data set and data
source. This also couples solr based search on taxonomy terms
linked to those content types.

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica/pacifica.info.yml
+++ b/pacifica/pacifica.info.yml
@@ -6,6 +6,7 @@ version: VERSION
 core: 8.x
 dependencies:
   - drupal:system (>=8.5)
+  - pacifica_base_content
   - pacifica_data_upload
   - pacifica_jsonapi
 
