--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "drupal/auto_entitylabel": "^3.0@beta",
         "drupal/token": "^1.7",
         "drupal/search_api_solr": "^3.9",
-        "drupal/facets": "^1.4"
+        "drupal/facets": "^1.4",
+        "drupal/search_api_autocomplete": "^1.3",
+        "drupal/search_api_spellcheck": "^3.0@alpha"
     }
 }
