Add some more modules
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica_base_content/pacifica_base_content.info.yml
+++ b/pacifica_base_content/pacifica_base_content.info.yml
@@ -15,7 +15,9 @@ dependencies:
   - path
   - rdf
   - search_api
+  - search_api_autocomplete
   - search_api_solr
+  - search_api_spellcheck
   - system
   - taxonomy
   - text
