--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/search_api_solr": "^3.9",
         "drupal/facets": "^1.4",
         "drupal/search_api_autocomplete": "^1.3",
-        "drupal/search_api_spellcheck": "^3.0@alpha"
+        "drupal/search_api_spellcheck": "^3.0@alpha",
+        "drupal/migrate_plus": "^5.1"
     }
 }
