Add some migrations and base content mods
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica_base_content/pacifica_base_content.info.yml
+++ b/pacifica_base_content/pacifica_base_content.info.yml
@@ -3,6 +3,7 @@ description: 'Pacifica base content types.'
 type: module
 core: 8.x
 dependencies:
+  - auto_entitylabel
   - block
   - comment
   - facets
