Add Sample Initial Data
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica_base_content/config/install/core.entity_form_display.node.pacifica_data_set.default.yml
+++ b/pacifica_base_content/config/install/core.entity_form_display.node.pacifica_data_set.default.yml
@@ -5,6 +5,7 @@ dependencies:
     - field.field.node.pacifica_data_set.body
     - field.field.node.pacifica_data_set.field_pacifica_category
     - field.field.node.pacifica_data_set.field_pacifica_data_set_type
+    - field.field.node.pacifica_data_set.field_pacifica_files
     - field.field.node.pacifica_data_set.field_pacifica_metadata
     - field.field.node.pacifica_data_set.field_tags
     - node.type.pacifica_data_set
@@ -52,6 +53,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_pacifica_files:
+    weight: 126
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: json_textarea
     region: content
   field_pacifica_metadata:
     weight: 122
