--- a/pacifica_base_content/pacifica_base_content.features.yml
+++ b/pacifica_base_content/pacifica_base_content.features.yml
@@ -1,1 +1,14 @@
 bundle: pacifica
+excluded:
+  - block.block.pacifica_category
+  - block.block.pacifica_datasettype
+  - block.block.pacifica_datasourcetype
+  - block.block.pacifica_persontype
+  - block.block.pacifica_tags
+  - core.entity_form_display.node.article.default
+  - core.entity_view_display.node.article.default
+  - core.entity_view_display.node.article.rss
+  - core.entity_view_display.node.article.teaser
+  - field.field.node.article.field_tags
+  - rdf.mapping.taxonomy_term.tags
+required: true
