Add entity reference fields between content types.
Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/pacifica_base_content/config/install/core.entity_form_display.node.pacifica_data_set.default.yml
+++ b/pacifica_base_content/config/install/core.entity_form_display.node.pacifica_data_set.default.yml
@@ -5,8 +5,10 @@ dependencies:
     - field.field.node.pacifica_data_set.body
     - field.field.node.pacifica_data_set.field_pacifica_category
     - field.field.node.pacifica_data_set.field_pacifica_data_set_type
+    - field.field.node.pacifica_data_set.field_pacifica_data_sources
     - field.field.node.pacifica_data_set.field_pacifica_files
     - field.field.node.pacifica_data_set.field_pacifica_metadata
+    - field.field.node.pacifica_data_set.field_pacifica_persons
     - field.field.node.pacifica_data_set.field_tags
     - node.type.pacifica_data_set
   module:
@@ -54,6 +56,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_pacifica_data_sources:
+    weight: 127
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_pacifica_files:
     weight: 126
     settings:
@@ -69,6 +81,16 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: json_textarea
+    region: content
+  field_pacifica_persons:
+    weight: 128
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_tags:
     weight: 125
