--- a/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_set.teaser.yml
+++ b/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_set.teaser.yml
@@ -6,8 +6,10 @@ dependencies:
     - field.field.node.pacifica_data_set.body
     - field.field.node.pacifica_data_set.field_pacifica_category
     - field.field.node.pacifica_data_set.field_pacifica_data_set_type
+    - field.field.node.pacifica_data_set.field_pacifica_data_sources
     - field.field.node.pacifica_data_set.field_pacifica_files
     - field.field.node.pacifica_data_set.field_pacifica_metadata
+    - field.field.node.pacifica_data_set.field_pacifica_persons
     - field.field.node.pacifica_data_set.field_tags
     - node.type.pacifica_data_set
   module:
@@ -34,8 +36,10 @@ content:
 hidden:
   field_pacifica_category: true
   field_pacifica_data_set_type: true
+  field_pacifica_data_sources: true
   field_pacifica_files: true
   field_pacifica_metadata: true
+  field_pacifica_persons: true
   field_tags: true
   langcode: true
   search_api_excerpt: true
