--- a/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_set.default.yml
+++ b/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_set.default.yml
@@ -5,8 +5,10 @@ dependencies:
     - field.field.node.pacifica_data_set.body
     - field.field.node.pacifica_data_set.field_pacifica_category
     - field.field.node.pacifica_data_set.field_pacifica_data_set_type
+    - field.field.node.pacifica_data_set.field_pacifica_data_sources
     - field.field.node.pacifica_data_set.field_pacifica_files
     - field.field.node.pacifica_data_set.field_pacifica_metadata
+    - field.field.node.pacifica_data_set.field_pacifica_persons
     - field.field.node.pacifica_data_set.field_tags
     - node.type.pacifica_data_set
   module:
@@ -41,6 +43,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_pacifica_data_sources:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_pacifica_files:
     weight: 106
     label: above
@@ -54,6 +64,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: json
+    region: content
+  field_pacifica_persons:
+    weight: 108
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_tags:
     weight: 105
