--- a/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_source.default.yml
+++ b/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_data_source.default.yml
@@ -4,8 +4,10 @@ dependencies:
   config:
     - field.field.node.pacifica_data_source.body
     - field.field.node.pacifica_data_source.field_pacifica_category
+    - field.field.node.pacifica_data_source.field_pacifica_data_sets
     - field.field.node.pacifica_data_source.field_pacifica_data_source_type
     - field.field.node.pacifica_data_source.field_pacifica_metadata
+    - field.field.node.pacifica_data_source.field_pacifica_persons
     - field.field.node.pacifica_data_source.field_tags
     - node.type.pacifica_data_source
   module:
@@ -32,6 +34,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_pacifica_data_sets:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_pacifica_data_source_type:
     weight: 105
     label: above
@@ -46,6 +56,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: json
+    region: content
+  field_pacifica_persons:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_tags:
     weight: 104
