--- a/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_person.default.yml
+++ b/pacifica_base_content/config/install/core.entity_view_display.node.pacifica_person.default.yml
@@ -4,6 +4,8 @@ dependencies:
   config:
     - field.field.node.pacifica_person.body
     - field.field.node.pacifica_person.field_pacifica_category
+    - field.field.node.pacifica_person.field_pacifica_data_sets
+    - field.field.node.pacifica_person.field_pacifica_data_sources
     - field.field.node.pacifica_person.field_pacifica_metadata
     - field.field.node.pacifica_person.field_pacifica_name
     - field.field.node.pacifica_person.field_pacifica_person_type
@@ -28,6 +30,22 @@ content:
     region: content
   field_pacifica_category:
     weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_pacifica_data_sets:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_pacifica_data_sources:
+    weight: 108
     label: above
     settings:
       link: true
