--- a/pacifica_sample_data/config/install/migrate_plus.migration.pacifica_sample_data_sets.yml
+++ b/pacifica_sample_data/config/install/migrate_plus.migration.pacifica_sample_data_sets.yml
@@ -6,7 +6,7 @@ migration_tags:
 source:
   plugin: embedded_data
   data_rows:
-    - id: 22
+    - id: 23
       title: Saccharomyces Genome Database
       body: |
         The SGD provides Internet access to the complete Saccharomyces
@@ -36,7 +36,7 @@ source:
         - id: 4
       data_set_types:
         - id: 7
-    - id: 23
+    - id: 24
       title: External Web Firewall Data
       body: |
         Cisco ASA firewalls protect our external web space and recieve a lot of
@@ -46,15 +46,20 @@ source:
         - id: 3
       data_set_types:
         - id: 11
-    - id: 24
+    - id: 25
       title: Simulated Climate Model (Regional Southeast US)
       body: |
         This model data was focused on the regional data southeast United
-        States, extending east to west Africa coast. The time the
+        States, extending east to west Africa coast. The training time is from
+        1990-2010 and is simulated through 2070-2100.
       categories:
         - id: 1
       data_set_types:
         - id: 10
+      persons:
+        - id: 10
+      data_sources:
+        - id: 22
   ids:
     id:
       type: integer
@@ -80,4 +85,20 @@ process:
         target_id:
           plugin: migration_lookup
           migration: pacifica_sample_data_set_types
+          source: id
+  field_pacifica_data_sources:
+    - plugin: sub_process
+      source: data_sources
+      process:
+        target_id:
+          plugin: migration_lookup
+          migration: pacifica_sample_data_sources
+          source: id
+  field_pacifica_persons:
+    - plugin: sub_process
+      source: persons
+      process:
+        target_id:
+          plugin: migration_lookup
+          migration: pacifica_sample_persons
           source: id
