--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,18 @@ matrix:
   fast_finish: true
   include:
     - env: DRUPAL=8.6.x
-      php: 7.1
-    - env: DRUPAL=8.6.x
-      php: 7.2
-    - env: DRUPAL=8.6.x
       php: 7.3
     - env: DRUPAL=8.7.x
-      php: 7.1
-    - env: DRUPAL=8.7.x
-      php: 7.2
-    - env: DRUPAL=8.7.x
+      php: 7.3
+    - env: DRUPAL=8.8.x
       php: 7.3
 
 addons:
   hosts:
     - example.com
+
+services:
+  - mariadb
 
 cache:
   directories:
