Fixes for Pipeline (#14)
* Fixes for Pipeline

This fixes travis pipeline to perform tests

Signed-off-by: David Brown <dmlb2000@gmail.com>

* Use Bionic

Signed-off-by: David Brown <dmlb2000@gmail.com>

* Mysql instead of mariadb

Signed-off-by: David Brown <dmlb2000@gmail.com>

* This doesn't depend on the others

Signed-off-by: David Brown <dmlb2000@gmail.com>

* Try using create-project instead of drush dl

Signed-off-by: David Brown <dmlb2000@gmail.com>

* go to the web dir

Signed-off-by: David Brown <dmlb2000@gmail.com>

* Try updating phpunit

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
 language: php
 sudo: false
+dist: bionic
 
 matrix:
   fast_finish: true
   include:
-    - env: DRUPAL=8.6.x
-      php: 7.1
-    - env: DRUPAL=8.6.x
-      php: 7.2
-    - env: DRUPAL=8.6.x
+    - env: DRUPAL=8.6
       php: 7.3
-    - env: DRUPAL=8.7.x
-      php: 7.1
-    - env: DRUPAL=8.7.x
-      php: 7.2
-    - env: DRUPAL=8.7.x
+    - env: DRUPAL=8.7
+      php: 7.3
+    - env: DRUPAL=8.8
       php: 7.3
 
 addons:
   hosts:
     - example.com
+
+services:
+  - mysql
 
 cache:
   directories:
@@ -64,11 +62,10 @@ before_script:
   - cd ..
 
   # Download Drupal 8 core.
-  - travis_retry drush dl drupal-$DRUPAL --drupal-project-rename=drupal
+  - composer -n create-project drupal/recommended-project:^${DRUPAL}@dev drupal
   - cd drupal
-
-  # Update PHPUnit.
-  - composer run-script drupal-phpunit-upgrade
+  - composer update phpunit/phpunit symfony/phpunit-bridge phpspec/prophecy symfony/yaml --with-dependencies
+  - cd web
 
   # Make the module appear in the correct place
   - ln -s $TESTDIR modules/pacifica
