--- a/pacifica_data_upload/pacifica_data_upload.info.yml
+++ b/pacifica_data_upload/pacifica_data_upload.info.yml
@@ -1,7 +1,7 @@
 name: 'Data Upload'
 description: 'Provides Data Upload content type and related configuration. Pacifica data upload containing all the information about files and metadata.'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - bigint
   - field
