--- a/pacifica_jsonapi/pacifica_jsonapi.info.yml
+++ b/pacifica_jsonapi/pacifica_jsonapi.info.yml
@@ -1,7 +1,7 @@
 name: JSONAPI
 description: 'Pacifica JSONAPI Settings'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - jsonapi
 package: Pacifica
