--- a/pacifica_base_content/pacifica_base_content.info.yml
+++ b/pacifica_base_content/pacifica_base_content.info.yml
@@ -1,7 +1,7 @@
 name: 'Pacifica Base Content'
 description: 'Pacifica base content types.'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - block
   - comment
