--- a/pacifica_sample_data/pacifica_sample_data.info.yml
+++ b/pacifica_sample_data/pacifica_sample_data.info.yml
@@ -1,7 +1,7 @@
 name: 'Pacifica Sample Data'
 description: 'Migrate representative sample data into Drupal.'
 type: module
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - migrate_plus
 package: Pacifica
