--- a/pacifica/pacifica.info.yml
+++ b/pacifica/pacifica.info.yml
@@ -3,7 +3,7 @@ description: 'Common Pacifica base module.'
 type: module
 package: Pacifica
 version: VERSION
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - drupal:system (>=8.5)
 
