--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,40 @@
         "drupal": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        "jsoneditor": {
+            "type": "package",
+            "package": {
+                "name": "josdejong/jsoneditor",
+                "version": "v5.29.1",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://github.com/josdejong/jsoneditor/archive/v5.29.1.zip",
+                    "type": "zip"
+                },
+                "source": {
+                    "url": "https://github.com/josdejong/jsoneditor",
+                    "type": "git",
+                    "reference": "v5.29.1"
+                }
+            }
+        },
+        "jsonview": {
+            "type": "package",
+            "package": {
+                "name": "yesmeck/jquery-jsonview",
+                "version": "v1.2.3",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://github.com/yesmeck/jquery-jsonview/archive/v1.2.3.zip",
+                    "type": "zip"
+                },
+                "source": {
+                    "url": "https://github.com/yesmeck/jquery-jsonview",
+                    "type": "git",
+                    "reference": "v1.2.3"
+                }
+            }
         }
     },
     "require": {
@@ -26,6 +60,8 @@
         "drupal/facets": "^1.4",
         "drupal/search_api_autocomplete": "^1.3",
         "drupal/search_api_spellcheck": "^3.0@alpha",
-        "drupal/migrate_plus": "^5.1"
+        "drupal/migrate_plus": "^5.1",
+        "yesmeck/jquery-jsonview": "^1.2",
+        "josdejong/jsoneditor": "^5.29"
     }
 }
